add_definitions(-DUSEGLFW)
add_subdirectory(OpenGLEngine)
add_subdirectory(CubeRGB)
add_subdirectory(MaterialAmbientVS)
add_subdirectory(MaterialDiffuseVS)
add_subdirectory(BlinVS)
add_subdirectory(MaterialAmbientFS)
add_subdirectory(MaterialDiffuseFS)
add_subdirectory(BlinFS)
add_subdirectory(MaterialSpecularFS)
add_subdirectory(DirectionLight)
add_subdirectory(PointLight)
add_subdirectory(SpotLight)
add_subdirectory(FogLinear)
add_subdirectory(FogExp)
add_subdirectory(FogExpx)
add_subdirectory(Skybox)
add_subdirectory(Reflection)
add_subdirectory(Refraction)
add_subdirectory(Gaussian)
add_subdirectory(GaussianHV)
add_subdirectory(GaussianHVMutil)
add_subdirectory(HDRMRT)
add_subdirectory(HDRNoMRT)
add_subdirectory(CombineHdr)
add_subdirectory(HdrLight)
add_subdirectory(BlurHdrLight)

add_subdirectory(PictureOverlay)
add_subdirectory(PictureMinus)
add_subdirectory(PictureAdd)
add_subdirectory(PictureSubdued)
add_subdirectory(PictureMotoLighter)
add_subdirectory(PictureMotoDarker)
add_subdirectory(PictureMultiply)
add_subdirectory(PictureDarker)
add_subdirectory(PictureLighter)
add_subdirectory(PictureBlend)

add_subdirectory(FrameWork)
add_subdirectory(ES200DrawElements)
add_subdirectory(GL430AtomicCounter)